# umkm-copilot-ai

./: .coverage  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  app.py.bak  mypy_after_patch2.txt  pyproject.toml  render.yaml  requirements.txt  sitecustomize.py  test_gemini.py  test_prompt_loader.py
.streamlit/: config.toml  secrets.example.toml
docs/: AGENT_LAYER_CONTRACT.md  AI_CONVERSATION_GEMINI_PATCH.md  AI_PRODUCT_CATALOG_AND_RANKING_FIX.md  AI_PRODUCT_CATALOG_AND_RANKING_FIX_UNIFIED_DIFF.patch  AI_PRODUCT_CONTEXT_FIX_PATCH.md  AI_PRODUCT_CONTEXT_FIX_UNIFIED_DIFF.patch  ANALYTICS_LAYER_CONTRACT.md  API_LAYER_CONTRACT.md  LANDING_AI_ROUTE_FIX.md  LANDING_AI_ROUTE_FIX_UNIFIED_DIFF.patch  LANDING_AI_ROUTE_FIX_V2.md  LANDING_AI_ROUTE_FIX_V2_UNIFIED_DIFF.patch  LATEST_GIT_RECONCILIATION.md  LATEST_GIT_RECONCILIATION_FULL_REPLACEMENT_CODE.md  LATEST_GIT_RECONCILIATION_UNIFIED_DIFF.patch  LLM_LAYER_CONTRACT.md  MARKETING_INSIGHT_RECORD_FIX.md  MARKETING_INSIGHT_RECORD_FIX_UNIFIED_DIFF.patch  MEMORY_LAYER_CONTRACT.md  MULTI_LLM_PROVIDER_PATCH.md  MULTI_LLM_PROVIDER_UNIFIED_DIFF.patch  ONBOARDING_BACKEND_CONNECTED.md  PYTEST_SUPABASE_COLLECTION_FIX.md  PYTEST_SUPABASE_COLLECTION_FIX_UNIFIED_DIFF.patch  README_STREAMLIT_MARKETING_INSIGHT_PATCH.md  README_STREAMLIT_MARKETING_INSIGHT_PATCH_UNIFIED_DIFF.patch  RUFF_LINE_LENGTH_FIX.md  RUFF_LINE_LENGTH_FIX_UNIFIED_DIFF.patch  TRANSACTION_WORKFLOW_LOGGING_FIX.md  TRANSACTION_WORKFLOW_LOGGING_FIX_UNIFIED_DIFF.patch  TROUBLESHOOTING_STREAMLIT_CODESPACES.md  VALIDATION_COMPILE_RESULTS.txt  (+2 more)
(+195 files in other folders)
